[package]
name = "wthr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
ureq = {version = "2.9.6" , features = ["json"]}
serde = { version = "1", features = ["derive"] }
clap = "4.5.4"